Added about section

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
     <!-- /.header -->
 
-    <div class="main-content">
+    <main class="main-content">
         <section class="home">
             <div class="home__content">
                 <div class="home__logo">
@@ -103,7 +103,51 @@
             <!-- /.home__content -->
         </section>
         <!-- /.home -->
-    </div>
+
+        <section class="about">
+
+            <div class="about__title">
+                <h2 class="title">
+                    About
+                    <span class="title__color">me</span>
+                    <span class="title__bg-text">about</span>
+                </h2>
+            </div>
+            <!-- /.about__title -->
+
+            <div class="about__content">
+                <div class="about__logo">
+                    <img src="img/about.jpg" alt="" class="logo__image">
+                </div>
+
+                <div class="descr">
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolore tempore mollitia excepturi, voluptatum ipsa id distinctio ratione quibusdam maxime, consequatur est facilis, repudiandae voluptas autem tenetur ea nam iure eveniet.
+                    Eos, saepe totam, eligendi, cumque a provident magni beatae vitae ea aliquid tenetur molestiae amet quos repellendus consequuntur maiores ab dolores. Labore consequatur non quod, ipsam dicta incidunt dolorum culpa?
+                    </p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam cumque numquam harum! Eligendi sint rerum perferendis molestias libero perspiciatis, exercitationem officiis voluptatibus non reiciendis esse? Aliquam corrupti necessitatibus fugit magnam.</p>
+                </div>
+
+            </div>
+            <!-- /.about__content -->
+            
+            <div class="about__info-wrap">
+                <ul class="about__info">
+                <li><label>Birthday:</label>28.12.2000</li>
+                <li><label>Age:</label>19 years old</li>
+                <li><label>City:</label>Moscow, Russia</li>
+                <li><label>Interests:</label>Programming, Sport, Improving</li>
+                <li><label>Study:</label><a href="https://new.mospolytech.ru/" target="_blank">Moscow Polytechnical University</a></li>
+                <li><label>Degree:</label>I`m third year student.</li>
+                <li><label>Program:</label>Applied mathematics and informatics</li>
+                <li><label>Github:</label><a href="https://github.com/zeromvx" target="_blank">zeromvx</a></li>
+                <li><label>Mail:</label><a href="mailto:zeromvx@gmail.com">zeromvx@gmail.com</a></li>
+                <li><label>Phone:</label><a href="tel:+79146739492">+7 914 673 94 92</a></li>   
+            </ul>
+            </div>
+        </section>
+        <!-- /.about -->
+
+    </main>
     <!-- /.main-content -->
 
 
