--- a/index.html
+++ b/index.html
@@ -121,10 +121,14 @@
                 </div>
 
                 <div class="descr">
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolore tempore mollitia excepturi, voluptatum ipsa id distinctio ratione quibusdam maxime, consequatur est facilis, repudiandae voluptas autem tenetur ea nam iure eveniet.
-                    Eos, saepe totam, eligendi, cumque a provident magni beatae vitae ea aliquid tenetur molestiae amet quos repellendus consequuntur maiores ab dolores. Labore consequatur non quod, ipsam dicta incidunt dolorum culpa?
+                    <p>Hi, My name is Sergey Karmanov. I`m a third year student of Moscow Polytechnical University. I`m 19 years old.
+                        I like develope web-sites and web applications, read a books, do sports and communicate with people. 
                     </p>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam cumque numquam harum! Eligendi sint rerum perferendis molestias libero perspiciatis, exercitationem officiis voluptatibus non reiciendis esse? Aliquam corrupti necessitatibus fugit magnam.</p>
+                    <p>While I was studying, I did several training projects, and in my spare time I practiced creating websites and web applications. 
+                        So, you can see my projects in portfolio. Also you can look on my skills in resume.
+                    </p>
+                    <p>At this moment, I am looking for a job as a Junior frontend developer. 
+                        In the future, I would like to become to senior fullstack developer or teamlead.</p>
                 </div>
 
             </div>
@@ -132,20 +136,90 @@
             
             <div class="about__info-wrap">
                 <ul class="about__info">
-                <li><label>Birthday:</label>28.12.2000</li>
-                <li><label>Age:</label>19 years old</li>
-                <li><label>City:</label>Moscow, Russia</li>
-                <li><label>Interests:</label>Programming, Sport, Improving</li>
-                <li><label>Study:</label><a href="https://new.mospolytech.ru/" target="_blank">Moscow Polytechnical University</a></li>
-                <li><label>Degree:</label>I`m third year student.</li>
-                <li><label>Program:</label>Applied mathematics and informatics</li>
-                <li><label>Github:</label><a href="https://github.com/zeromvx" target="_blank">zeromvx</a></li>
-                <li><label>Mail:</label><a href="mailto:zeromvx@gmail.com">zeromvx@gmail.com</a></li>
-                <li><label>Phone:</label><a href="tel:+79146739492">+7 914 673 94 92</a></li>   
-            </ul>
+                    <li><label>Birthday:</label>28.12.2000</li>
+                    <li><label>Age:</label>19 years old</li>
+                    <li><label>City:</label>Moscow, Russia</li>
+                    <li><label>Interests:</label>Programming, Sport, Improving</li>
+                    <li><label>Study:</label><a href="https://new.mospolytech.ru/" target="_blank">Moscow Polytechnical University</a></li>
+                    <li><label>Degree:</label>I`m third year student.</li>
+                    <li><label>Program:</label>Applied mathematics and informatics</li>
+                    <li><label>Github:</label><a href="https://github.com/zeromvx" target="_blank">zeromvx</a></li>
+                    <li><label>Mail:</label><a href="mailto:zeromvx@gmail.com">zeromvx@gmail.com</a></li>
+                    <li><label>Phone:</label><a href="tel:+79146739492">+7 914 673 94 92</a></li>   
+                </ul>
             </div>
         </section>
         <!-- /.about -->
+
+        <section class="resume">
+            <div class="resume__title">
+                <h2 class="title">
+                    My
+                    <span class="title__color">Resume</span>
+                    <span class="title__bg-text">Resume</span>
+                </h2>
+            </div>
+            <!-- /.resume__title -->
+
+            <ul class="resume__content">
+
+                <li class="skills">
+                    <ul>
+                        <h4 class="skills__title">Hard skills</h4>
+                        <li>
+                            <label>Basic skills:</label>
+                            HTML5, CSS3, JS ES6
+                        </li>
+                        <li>
+                            <label>Preprocesors:</label>
+                            Sass
+                        </li>
+                        <li>
+                            <label>Build systems:</label>
+                            Gulp
+                        </li>
+                        <li>
+                            <label>Version control systems:</label>
+                            Git (commit, fetch, pull, push, branch)
+                        </li>
+                        <li>
+                            <label>CSS frameworks:</label>
+                             basics of Bootstrap 4 / 
+                        </li>
+                        <li>
+                            <label>JavaScript libriaries:</label>
+                            basics of React
+                        </li>
+                    </ul>
+                </li>
+                <!-- /.hard-skills -->
+
+                <li class="skills">
+                    <ul>
+                        <h4 class="skills__title">Language skills</h4>
+                        <li>
+                            <label>Russian</label>
+                            <div class="line russian-line"></div>
+                            <p>Свободно общаюсь и пишу</p>
+                        </li>
+                        <li>
+                            <label>English</label>
+                            <div class="line english-line"></div>
+                            <p>I have B1, so I can read the technical documentation</p>
+                        </li>
+                        <li>
+                            <label>Japanese</label>
+                            <div class="line japanese-line"></div>
+                            <p>ひらがな、カタカナ、漢字をいくつか知っています</p>
+                        </li>
+                    </ul>
+                </li>
+                <!-- /.laguage-skills -->
+
+            </ul>
+            <!-- /.resume__content -->
+        </section>
+        <!-- /.resume -->
 
     </main>
     <!-- /.main-content -->
