--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         <section class="home">
             <div class="home__content">
                 <div class="home__logo wow zoomIn" data-wow-delay="0.2s">
-                    <img src="img/photo1.jpg" alt="">
+                    <img src="img/p1.jpg" alt="">
                 </div>
     
                 <h1 class="home__name wow fadeInUp" data-wow-delay="0.4s">Sergey Karmanov</h1>
