Fixed bugs with adaptive in portfolio section

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Sergey Karmanov</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css">
     <!-- Stylesheets -->
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/main.min.css">
     <!-- FontAwesome -->
     <script src="https://use.fontawesome.com/1d7b4baedf.js"></script>
 
