--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@
 
  
     <script src="js/mixitup.min.js"></script>
-    <script src="js/wow.min.js"></script>
+    <!-- <script src="js/wow.min.js"></script> -->
     <script src="js/main.js"></script>
 </body>
 </html>
