--- a/index.html
+++ b/index.html
@@ -61,15 +61,15 @@
     <main class="main-content">
         <section class="home" id="home">
             <div class="home__content">
-                <div class="home__logo wow zoomIn" data-wow-delay="0.2s">
+                <div class="home__logo ">
                     <img src="img/p1.jpg" alt="">
                 </div>
 
-                <h1 class="home__name wow fadeInUp" data-wow-delay="0.4s">Sergey Karmanov</h1>
+                <h1 class="home__name ">Sergey Karmanov</h1>
 
-                <p class="home__desc wow fadeInUp" data-wow-delay="0.4s">I`m Frontend Developer</p>
+                <p class="home__desc ">I`m Frontend Developer</p>
 
-                <ul class="socials wow fadeInUp" data-wow-delay="0.4s">
+                <ul class="socials ">
                     <li>
                         <a href="#">
                             <i class="fa fa-facebook fa-lg"></i>
@@ -104,7 +104,7 @@
         <section class="about" id="about">
 
             <div class="about__title">
-                <h2 class="title wow fadeInUp" data-wow-delay="0.4s">
+                <h2 class="title ">
                     About
                     <span class="title__color">me</span>
                     <span class="title__bg-text">about</span>
@@ -113,11 +113,11 @@
             <!-- /.about__title -->
 
             <div class="about__content">
-                <div class="about__logo wow fadeInUp" data-wow-delay="0.4s">
+                <div class="about__logo ">
                     <img src="img/about.jpg" alt="" class="logo__image">
                 </div>
 
-                <div class="descr wow fadeInUp" data-wow-delay="0.4s">
+                <div class="descr ">
                     <p>Hi, My name is Sergey Karmanov. I`m a third year student of Moscow Polytechnical University. I`m 19 years old. I like develope web-sites and web applications, read a books, do sports and communicate with people.
                     </p>
                     <p>While I was studying, I did several training projects, and in my spare time I practiced creating websites and web applications. So, you can see my projects in portfolio. Also you can look on my skills in resume.
@@ -129,7 +129,7 @@
             <!-- /.about__content -->
 
             <div class="about__info-wrap">
-                <ul class="about__info wow fadeInUp" data-wow-delay="0.4s">
+                <ul class="about__info ">
                     <li><label>Birthday:</label>28.12.2000</li>
                     <li><label>Age:</label>19 years old</li>
                     <li><label>City:</label>Moscow, Russia</li>
@@ -147,7 +147,7 @@
 
         <section class="resume" id="resume">
             <div class="resume__title">
-                <h2 class="title wow zoomIn" data-wow-delay="0.2s">
+                <h2 class="title ">
                     My
                     <span class="title__color">Resume</span>
                     <span class="title__bg-text">Resume</span>
@@ -157,7 +157,7 @@
 
             <ul class="resume__content">
 
-                <li class="skills-wrap wow fadeInUp" data-wow-delay="0.4s">
+                <li class="skills-wrap ">
                     <div class="skills">
                         <h4 class="skills__title">Hard skills</h4>
                         <ul>
@@ -188,7 +188,7 @@
                 </li>
                 <!-- /.hard-skills -->
 
-                <li class="skills-wrap wow fadeInUp" data-wow-delay="0.4s">
+                <li class="skills-wrap ">
                     <div class="skills">
                         <h4 class="skills__title">Language skills</h4>
                         <ul>
@@ -221,7 +221,7 @@
 
         <section class="portfolio" id="portfolio">
             <div class="portfolio__title">
-                <h2 class="title wow zoomIn" data-wow-delay="0.2s">
+                <h2 class="title ">
                     My
                     <span class="title__color">portfolio</span>
                     <span class="title__bg-text">portfolio</span>
@@ -239,56 +239,56 @@
 
             <ul class="portfolio__content container">
 
-                <li class="work mix category-a wow fadeInUp" data-order="1" data-wow-delay="0.4s">
+                <li class="work mix category-a " data-order="1">
                     <figure>
                         <img src="img/about.jpg" alt="" class="work__image">
                         <figcaption class="work__descr">HTML shablon</figcaption>
                     </figure>
                 </li>
 
-                <li class="work mix category-a wow fadeInUp" data-order="1" data-wow-delay="0.4s">
+                <li class="work mix category-a " data-order="1">
                     <figure>
                         <img src="img/about.jpg" alt="" class="work__image">
                         <figcaption class="work__descr">HTML shablon</figcaption>
                     </figure>
                 </li>
 
-                <li class="work mix category-a wow fadeInUp" data-order="1" data-wow-delay="0.4s">
+                <li class="work mix category-a " data-order="1">
                     <figure>
                         <img src="img/about.jpg" alt="" class="work__image">
                         <figcaption class="work__descr">HTML shablon</figcaption>
                     </figure>
                 </li>
 
-                <li class="work mix category-a wow fadeInUp" data-order="1" data-wow-delay="0.4s">
+                <li class="work mix category-a " data-order="1">
                     <figure>
                         <img src="img/about.jpg" alt="" class="work__image">
                         <figcaption class="work__descr">HTML shablon</figcaption>
                     </figure>
                 </li>
 
-                <li class="work mix category-b wow fadeInUp" data-order="2" data-wow-delay="0.4s">
+                <li class="work mix category-b " data-order="2">
                     <figure>
                         <img src="img/about.jpg" alt="" class="work__image">
                         <figcaption class="work__descr">HTML shablon</figcaption>
                     </figure>
                 </li>
 
-                <li class="work mix category-b wow fadeInUp" data-order="2" data-wow-delay="0.4s">
+                <li class="work mix category-b " data-order="2">
                     <figure>
                         <img src="img/about.jpg" alt="" class="work__image">
                         <figcaption class="work__descr">HTML shablon</figcaption>
                     </figure>
                 </li>
 
-                <li class="work mix category-b wow fadeInUp" data-order="2" data-wow-delay="0.4s">
+                <li class="work mix category-b " data-order="2">
                     <figure>
-                        <img src="img/about.jpg" alt="" class="work__image" data-wow-delay="0.4s">
+                        <img src="img/about.jpg" alt="" class="work__image">
                         <figcaption class="work__descr">HTML shablon</figcaption>
                     </figure>
                 </li>
 
-                <li class="work mix category-b wow fadeInUp" data-order="2" data-wow-delay="0.4s">
+                <li class="work mix category-b " data-order="2">
                     <figure>
                         <img src="img/about.jpg" alt="" class="work__image">
                         <figcaption class="work__descr">HTML shablon</figcaption>
@@ -300,7 +300,7 @@
         <!-- /.portfolio -->
 
         <footer class="footer">
-            <p class="wow fadeInUp" data-wow-delay="0.4s">2020, Sergey Karmanov</p>
+            <p>2020, Sergey Karmanov</p>
         </footer>
         <!-- /.footer -->
     </main>
@@ -308,7 +308,6 @@
 
 
     <script src="js/mixitup.min.js"></script>
-    <!-- <script src="js/wow.min.js"></script> -->
     <script src="js/main.min.js"></script>
 </body>
 
