Added js practice sites

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 
 <body>
 
-    <div class="toggle-icon">
-        <div id="nav-icon3">
+    <div class="toggle-btn">
+        <div id="nav-icon3" class="toggle-icon">
             <span></span>
             <span></span>
             <span></span>
@@ -118,11 +118,16 @@
                 </div>
 
                 <div class="descr ">
-                    <p>Hi, My name is Sergey Karmanov. I`m a third year student of Moscow Polytechnical University. I`m 19 years old. I like develope web-sites and web applications, read a books, do sports and communicate with people.
+                    <p>Hi, My name is Sergey Karmanov. I`m a third year student of Moscow Polytechnical University. I`m
+                        19 years old. I like develope web-sites and web applications, read a books, do sports and
+                        communicate with people.
                     </p>
-                    <p>While I was studying, I did several training projects, and in my spare time I practiced creating websites and web applications. So, you can see my projects in portfolio. Also you can look on my skills in resume.
+                    <p>While I was studying, I did several training projects, and in my spare time I practiced creating
+                        websites and web applications. So, you can see my projects in portfolio. Also you can look on my
+                        skills in resume.
                     </p>
-                    <p>At this moment, I am looking for a job as a Junior frontend developer. In the future, I would like to become to senior fullstack developer or teamlead.</p>
+                    <p>At this moment, I am looking for a job as a Junior frontend developer. In the future, I would
+                        like to become to senior fullstack developer or teamlead.</p>
                 </div>
 
             </div>
@@ -134,7 +139,8 @@
                     <li><label>Age:</label>19 years old</li>
                     <li><label>City:</label>Moscow, Russia</li>
                     <li><label>Interests:</label>Programming, Sport, Improving</li>
-                    <li><label>Study:</label><a href="https://new.mospolytech.ru/" target="_blank">Moscow Polytechnical University</a></li>
+                    <li><label>Study:</label><a href="https://new.mospolytech.ru/" target="_blank">Moscow Polytechnical
+                            University</a></li>
                     <li><label>Degree:</label>I`m third year student.</li>
                     <li><label>Program:</label>Applied mathematics and informatics</li>
                     <li><label>Github:</label><a href="https://github.com/zeromvx" target="_blank">zeromvx</a></li>
