Added images for js section in portfolio section

--- a/index.html
+++ b/index.html
@@ -275,29 +275,41 @@
 
                 <li class="work mix category-b " data-order="2">
                     <figure>
-                        <img src="img/about.jpg" alt="" class="work__image">
-                        <figcaption class="work__descr">HTML shablon</figcaption>
+                        <img src="img/todo.jpg" alt="" class="work__image">
+                        <figcaption class="work__descr">
+                            <a href="https://github.com/zeromvx/todo" target="_blank">Github</a>
+                            <a href="sites/todo/index.html" target="_blank">To-Do list</a>
+                        </figcaption>
                     </figure>
                 </li>
 
                 <li class="work mix category-b " data-order="2">
                     <figure>
-                        <img src="img/about.jpg" alt="" class="work__image">
-                        <figcaption class="work__descr">HTML shablon</figcaption>
+                        <img src="img/snake.jpg" alt="" class="work__image">
+                        <figcaption class="work__descr">
+                            <a href="https://github.com/zeromvx/snakegame" target="_blank">Github</a>
+                            <a href="sites/snake-game/index.html" target="_blank">Snake game</a>
+                        </figcaption>
                     </figure>
                 </li>
 
                 <li class="work mix category-b " data-order="2">
                     <figure>
-                        <img src="img/about.jpg" alt="" class="work__image">
-                        <figcaption class="work__descr">HTML shablon</figcaption>
+                        <img src="img/converter.jpg" alt="" class="work__image">
+                        <figcaption class="work__descr">
+                            <a href="https://github.com/zeromvx/converter" target="_blank">Github</a>
+                            <a href="sites/converter/index.html" target="_blank">Currency Converter</a>
+                        </figcaption>
                     </figure>
                 </li>
 
                 <li class="work mix category-b " data-order="2">
                     <figure>
-                        <img src="img/about.jpg" alt="" class="work__image">
-                        <figcaption class="work__descr">HTML shablon</figcaption>
+                        <img src="img/search.jpg" alt="" class="work__image">
+                        <figcaption class="work__descr">
+                            <a href="https://github.com/zeromvx/livesearch" target="_blank">Github</a>
+                            <a href="sites/livesearch/index.html" target="_blank">Live search</a>
+                        </figcaption>
                     </figure>
                 </li>
             </ul>
