added iosiflee landing

--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
 
             <div class="portfolio__filter filter-options">
                 <button class="filter__btn active" data-filter="all">All</button>
-                <button class="filter__btn" data-filter=".category-a">Verstka</button>
+                <button class="filter__btn" data-filter=".category-a">Layouts</button>
                 <button class="filter__btn" data-filter=".category-b">JS</button>
                 <button class="filter__btn" data-group="react">React</button>
             </div>
@@ -268,8 +268,11 @@
 
                 <li class="work mix category-a " data-order="1">
                     <figure>
-                        <img src="img/about.jpg" alt="" class="work__image">
-                        <figcaption class="work__descr">HTML shablon</figcaption>
+                        <img src="img/iosiflee.jpg" alt="" class="work__image">
+                        <figcaption class="work__descr">
+                            <a href="https://github.com/zeromvx/iosiflee" target="_blank">Github</a>
+                            <a href="sites/iosiflee/index.html" target="_blank">Landing Iosif Lee</a>
+                        </figcaption>
                     </figure>
                 </li>
 
@@ -326,7 +329,7 @@
 
 
     <script src="js/mixitup.min.js"></script>
-    <script src="js/main.min.js"></script>
+    <script src="js/main.js"></script>
 </body>
 
 </html>
