changed folder for js lobs

--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@
     <!-- /.main-content -->
 
 
-    <script src="js/mixitup.min.js"></script>
+    <script src="libs/mixitup.min.js"></script>
     <script src="js/main.js"></script>
 </body>
 
