added webapp site

--- a/index.html
+++ b/index.html
@@ -261,7 +261,10 @@
                 <li class="work mix category-a " data-order="1">
                     <figure>
                         <img src="img/about.jpg" alt="" class="work__image">
-                        <figcaption class="work__descr">HTML shablon</figcaption>
+                        <figcaption class="work__descr">
+                            <a href="https://github.com/zeromvx/landing" target="_blank">Github</a>
+                            <a href="sites/webapp/index.html" target="_blank">Wep app</a>
+                        </figcaption>
                     </figure>
                 </li>
 
