--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
 
                 <li class="work mix category-a " data-order="1">
                     <figure>
-                        <img src="img/about.jpg" alt="" class="work__image">
+                        <img src="img/webapp.jpg" alt="" class="work__image">
                         <figcaption class="work__descr">
                             <a href="https://github.com/zeromvx/landing" target="_blank">Github</a>
                             <a href="sites/webapp/index.html" target="_blank">Wep app</a>
